# jira_agent

./: .gitignore  README.md  env.example  main.py  pyproject.toml
docs/: SETUP.md
prompts/: confluence_search.prompt  ticket_analyzer.prompt
src/jira_agent/: __init__.py
src/jira_agent/agent/: llm.py
src/jira_agent/atlassian/: __init__.py  confluence.py  jira.py
src/jira_agent/core/: __init__.py  config.py  confluence_handler.py  main.py
src/jira_agent/data/static_tickets/: tls_inspection.py
src/jira_agent/prompts/: __init__.py  confluence_search.py  templates.py  ticket_analyzer.py
